20131018
========
- Fixed escaping of special characters in LIKE operations, in order to correctly 
  generate an equivalent regular expression.


20131009
========
- Fixed 'let' filter by row_key